docs/Language/Grammar.ebnf
NOTATION:

[] → optional (zero or one)
{} → zero or more
() → grouping
|  → alternative


GRAMMAR RULES
=================================================

program                     = { statement | function_decl } ;

function_decl               = return_type, IDENTIFIER, LBR, [ parameter_list ], RBR, block ;

parameter_list              = parameter, { COMMA, parameter } ;

parameter                   = type, IDENTIFIER ;

statement                   = block
                            | var_decl
                            | assignment
                            | if_statement
                            | while_statement
                            | for_statement
                            | continue_statement
                            | break_statement
                            | return_statement
                            | expression_statement ;

block                       = LCBR, { statement }, RCBR ;

var_decl                    = type, IDENTIFIER, [ EQUAL, expression ], SEMI ;

assignment                  = IDENTIFIER, { index }, assignment_operator, expression, SEMI ;

if_statement                = IF, LBR, expression, RBR, block, [ ELSE, ( block | if_statement ) ] ;

while_statement             = WHILE, LBR, expression, RBR, block ;

for_statement               = FOR, LBR, for_variable, COLON, for_iterable, RBR, block ;

for_variable                = for_var_decl
                            | IDENTIFIER ;

for_var_decl                = type, IDENTIFIER ;

for_iterable                = expression
                            | expression, DOT_DOT, expression, [ for_step ] ;

for_step                    = COLON, expression ;

continue_statement          = CONTINUE, SEMI ;

break_statement             = BREAK, SEMI ;

return_statement            = RETURN, [ expression ], SEMI ;

expression_statement        = expression ;

expression                  = logical_or_expression ;

logical_or_expression       = logical_and_expression, { LOGICAL_OR, logical_and_expression } ;

logical_and_expression      = bitwise_or_expression, { LOGICAL_AND, bitwise_or_expression } ;

bitwise_or_expression       = bitwise_xor_expression, { BITWISE_OR, bitwise_xor_expression } ;

bitwise_xor_expression      = bitwise_and_expression, { BITWISE_XOR, bitwise_and_expression } ;

bitwise_and_expression      = equality_expression, { BITWISE_AND, equality_expression } ;

equality_expression         = comparison_expression, { ( EQUAL_EQUAL | NOT_EQUAL ), comparison_expression } ;

comparison_expression       = shift_expression, { ( LESS_THAN | LESS_THAN_OR_EQUAL | GREATER_THAN | GREATER_THAN_OR_EQUAL ), shift_expression } ;

shift_expression            = additive_expression, { ( LEFT_SHIFT | RIGHT_SHIFT | UNSIGNED_RIGHT_SHIFT ), additive_expression } ;

additive_expression         = multiplicative_expression, { ( PLUS | MINUS ), multiplicative_expression } ;

multiplicative_expression   = unary_expression, { ( MULTIPLY | DIVIDE | INTEGER_DIVIDE | MODULO ), unary_expression } ;

unary_expression            = ( PLUS | MINUS | LOGICAL_NOT | BITWISE_NOT ), unary_expression
                            | cast_expression
                            | [ INCREMENT | DECREMENT ], postfix_expression ;

cast_expression             = LBR, type, RBR, unary_expression ;

index                       = LSQBR, expression, RSQBR ;

field_access                = DOT, IDENTIFIER ;

postfix_expression          = primary_expression, { index | field_access }, [ INCREMENT | DECREMENT ] ;

primary_expression          = function_call
                            | IDENTIFIER
                            | new_expression
                            | literal
                            | LBR, expression, RBR ;

function_call               = IDENTIFIER, LBR, [ argument_list ], RBR ;

argument_list               = expression, { COMMA, expression } ;

new_expression              = NEW, primitive_type, index, { index }, [ array_initialiser ] ;

array_initialiser           = LCBR, [ array_initialiser_element, { COMMA, array_initialiser_element } ], RCBR ;

array_initialiser_element   = expression
                            | array_initialiser ;

return_type                 = type | VOID ;

type                        = primitive_type, { LSQBR, RSQBR } ;

primitive_type              = INT_TYPE
                            | FLOAT_TYPE
                            | BOOL_TYPE
                            | CHAR_TYPE ;

literal                     = INT_LITERAL
                            | FLOAT_LITERAL
                            | BOOL_LITERAL
                            | char_literal ;

char_literal                =  ;

assignment_operator         = EQUAL ;


TOKENS
=================================================

SEMI                        = ";"
COLON                       = ":"
COMMA                       = ","
DOT                         = "."
DOT_DOT                     = ".."
LBR                         = "("
RBR                         = ")"
LCBR                        = "{"
RCBR                        = "}"
LSQBR                       = "["
RSQBR                       = "]"
SINGLE_QUOTE                = "'"

EQUAL                       = "="
PLUS                        = "+"
INCREMENT                   = "++"
MINUS                       = "-"
DECREMENT                   = "--"
MULTIPLY                    = "*"
DIVIDE                      = "/"
INTEGER_DIVIDE              = "//"
MODULO                      = "%"

BITWISE_OR                  = "|"
BITWISE_XOR                 = "^"
BITWISE_AND                 = "&"
BITWISE_NOT                 = "~"

LEFT_SHIFT                  = "<<"
RIGHT_SHIFT                 = ">>"
UNSIGNED_RIGHT_SHIFT        = ">>>"

LOGICAL_OR                  = "||"
LOGICAL_AND                 = "&&"
LOGICAL_NOT                 = "!"
EQUAL_EQUAL                 = "=="
NOT_EQUAL                   = "!="
LESS_THAN                   = "<"
LESS_THAN_OR_EQUAL          = "<="
GREATER_THAN                = ">"
GREATER_THAN_OR_EQUAL       = ">="

IF                          = "if"
ELSE                        = "else"
WHILE                       = "while"
FOR                         = "for"
CONTINUE                    = "continue"
BREAK                       = "break"
RETURN                      = "return"
NEW                         = "new"

VOID_TYPE                   = "void"
INT_TYPE                    = "int"
FLOAT_TYPE                  = "float"
BOOL_TYPE                   = "bool"
CHAR_TYPE                   = "char"

INT_LITERAL                 = "[0-9]+"
FLOAT_LITERAL               = "[0-9]+\.[0-9]+f"
BOOL_LITERAL                = "true|false"
CHAR_LITERAL                = "'", a Unicode character or valid escape sequence, "'" ;

IDENTIFIER                  = "(?!__)[a-zA-Z_][a-zA-Z0-9_]*"


Valid escape sequences:     '\n', '\t', '\r', '\0', '\\', '\''
