src/compiler/Parser.cpp
#include "Parser.h"

#include <cmath>

#include "AST.h"
#include "../include/Error.h"


compiler::Parser::Parser(Tokeniser *tokeniser, const std::filesystem::path* path) :
    tokeniser(tokeniser), path(path) {}

/*
 *  program             = { statement | function_decl } ;
 */
std::unique_ptr<ast::Program> compiler::Parser::parseProgram() const {
    std::vector<std::unique_ptr<ast::Stm>> statements;
    std::vector<std::unique_ptr<ast::FunctionDecl>> functionDecls;

    while (this->tokeniser->tok().kind != TokenKind::END_OF_FILE) {
        const Token token = this->tokeniser->tok();

        if (isPrimitiveTypeToken(token.kind)) {
            auto type = this->parseType();
            // to determine whether to parse varDecl or functionDecl
            if (this->tokeniser->lookAhead(1).kind == TokenKind::LBR) {
                functionDecls.push_back(this->parseFunctionDecl(std::move(type)));
            } else {
                statements.push_back(this->parseVarDecl(std::move(type)));
            }
            continue;
        }

        switch (token.kind) {
            case TokenKind::VOID_TYPE:
                functionDecls.push_back(this->parseFunctionDecl(this->parseReturnType()));
                break;

            case TokenKind::LCBR:
            case TokenKind::IDENTIFIER:
            case TokenKind::IF:
            case TokenKind::WHILE:
            case TokenKind::FOR:
            case TokenKind::CONTINUE:
            case TokenKind::BREAK:
            case TokenKind::RETURN:
                statements.push_back(this->parseStm());
                break;

            default:
                statements.push_back(this->parseExpressionStatement());
        }
    }

    return std::make_unique<ast::Program>(
        std::move(statements),
        std::move(functionDecls)
    );
}

/*
 *  function_decl               = return_type, IDENTIFIER, LBR, [ parameter_list ], RBR, block ;
 */
std::unique_ptr<ast::FunctionDecl> compiler::Parser::parseFunctionDecl(std::unique_ptr<ast::TypeInfo> returnType) const {
    std::unique_ptr<ast::Identifier> identifier = this->parseIdentifier();
    this->tokeniser->eat(TokenKind::LBR);

    std::vector<std::unique_ptr<ast::Parameter>> parameterList;
    if (this->tokeniser->tok().kind != TokenKind::RBR) {
        parameterList = this->parseParameterList();
    }

    this->tokeniser->eat(TokenKind::RBR);
    std::unique_ptr<ast::Block> block = this->parseBlock();

    return std::make_unique<ast::FunctionDecl>(
        returnType->line,
        returnType->column,
        std::move(returnType),
        std::move(identifier),
        std::move(parameterList),
        std::move(block)
    );
}

/*
 *  parameter_list              = parameter, { COMMA, parameter } ;
 */
std::vector<std::unique_ptr<ast::Parameter>> compiler::Parser::parseParameterList() const {
    std::vector<std::unique_ptr<ast::Parameter>> parameterList;

    parameterList.push_back(this->parseParameter());

    while (this->tokeniser->tok().kind == TokenKind::COMMA) {
        this->tokeniser->next();
        parameterList.push_back(this->parseParameter());
    }
    return parameterList;
}

/*
 *  parameter                   = type, IDENTIFIER ;
 */
std::unique_ptr<ast::Parameter> compiler::Parser::parseParameter() const {
    std::unique_ptr<ast::TypeInfo> type = this->parseType();
    std::unique_ptr<ast::Identifier> identifier = this->parseIdentifier();

    return std::make_unique<ast::Parameter>(
        type->line,
        type->column,
        std::move(type),
        std::move(identifier)
    );
}

/*
 *  statement           = block
 *                      | var_decl
 *                      | assignment
 *                      | if_statement
 *                      | while_statement
 *                      | continue_statement
 *                      | break_statement
 *                      | return_statement
 *                      | expression_statement ;
 */
std::unique_ptr<ast::Stm> compiler::Parser::parseStm() const {
    const Token stm = tokeniser->tok();

    if (isPrimitiveTypeToken(stm.kind)) {
        return this->parseVarDecl(this->parseType());
    }

    switch (stm.kind) {
        case TokenKind::LCBR: return this->parseBlock();
        case TokenKind::IDENTIFIER: return this->parseIdentifierStm();
        case TokenKind::IF: return this->parseIfStatement();
        case TokenKind::WHILE: return this->parseWhileStatement();
        case TokenKind::FOR: return this->parseForStatement();
        case TokenKind::CONTINUE: return this->parseContinueStatement();
        case TokenKind::BREAK: return this->parseBreakStatement();
        case TokenKind::RETURN: return this->parseReturnStatement();

        default:
            this->throwUnexpectedTokenError(this->tokeniser->tok());
    }
}

std::unique_ptr<ast::Stm> compiler::Parser::parseIdentifierStm() const {
    // check type of token following:
    // IDENTIFIER, { INDEX }
    // to determine whether to parse assignment or expression statement

    int openSquareBracketCount = 0;
    bool insideBracket = false;
    int lookahead = 1;

    // each iteration increments lookahead
    // execution breaks from the while loop when openSquareBracketCount is zero and current TokenKind is not LSQBR
    while (true) {
        switch (this->tokeniser->lookAhead(lookahead).kind) {
            case TokenKind::LSQBR: {
                openSquareBracketCount++;
                insideBracket = true;
                break;
            }
            case TokenKind::RSQBR:
                openSquareBracketCount--; break;

            default:
                if (openSquareBracketCount == 0) insideBracket = false;
        }
        if (!insideBracket) break;
        lookahead++;
    }

    if (isAssignmentOperator(this->tokeniser->lookAhead(lookahead).kind)) {
        return this->parseAssignment();
    }
    return this->parseExpressionStatement();
}

/*
 *  block                       = LCBR, { statement }, RCBR ;
 */
std::unique_ptr<ast::Block> compiler::Parser::parseBlock() const {
    const auto LCBR_Token = this->tokeniser->tok();
    this->tokeniser->eat(TokenKind::LCBR);

    std::vector<std::unique_ptr<ast::Stm>> statements;

    Token stm = tokeniser->tok();
    while (stm.kind != TokenKind::RCBR) {
        statements.push_back(this->parseStm());
        stm = tokeniser->tok();
    }

    const auto RCBR_Token = this->tokeniser->tok();
    this->tokeniser->eat(TokenKind::RCBR);
    return std::make_unique<ast::Block>(
        LCBR_Token.line,
        LCBR_Token.column,
        RCBR_Token.line,
        RCBR_Token.column,
        std::move(statements),
        nullptr
    );
}

/*
 *  var_decl            = type, IDENTIFIER, [ EQUAL, expression ], SEMI ;
 */
std::unique_ptr<ast::StmVarDecl> compiler::Parser::parseVarDecl(std::unique_ptr<ast::TypeInfo> type) const {
    std::unique_ptr<ast::Identifier> identifier = this->parseIdentifier();

    // varDecl DOES NOT have an initialiser
    if (this->tokeniser->tok().kind != TokenKind::EQUAL) {
        this->tokeniser->eat(TokenKind::SEMI);
        return std::make_unique<ast::StmVarDecl>(
            type->line,
            type->column,
            std::move(type),
            std::move(identifier),
            nullptr
        );
    }

    // varDecl DOES have an initialiser
    this->tokeniser->eat(TokenKind::EQUAL);
    std::unique_ptr<ast::Expr> optionalInitialiser = this->parseExpr();
    this->tokeniser->eat(TokenKind::SEMI);

    return std::make_unique<ast::StmVarDecl>(
        type->line,
        type->column,
        std::move(type),
        std::move(identifier),
        std::move(optionalInitialiser)
    );
}

/*
 *  assignment                  = IDENTIFIER, { index }, assignment_operator, expression, SEMI ;
 */
std::unique_ptr<ast::StmAssignment> compiler::Parser::parseAssignment() const {
    std::unique_ptr<ast::Identifier> identifier = this->parseIdentifier();

    std::vector<std::unique_ptr<ast::Index>> indices;
    while (this->tokeniser->tok().kind == TokenKind::LSQBR) {
        indices.push_back(this->parseIndex());
    }

    std::unique_ptr<ast::AssignmentOperatorInfo> assignmentOperatorInfo = this->parseAssignmentOperator();
    std::unique_ptr<ast::Expr> expression = this->parseExpr();
    this->tokeniser->eat(TokenKind::SEMI);

    return std::make_unique<ast::StmAssignment>(
        identifier->line,
        identifier->column,
        std::move(identifier),
        indices,
        std::move(assignmentOperatorInfo),
        std::move(expression)
    );
}

/*
 *  if_statement                = IF, LBR, expression, RBR, block, [ ELSE, ( block | if_statement ) ] ;
 */
std::unique_ptr<ast::IfStm> compiler::Parser::parseIfStatement() const {
    const auto token = this->tokeniser->tok();
    this->tokeniser->next();
    this->tokeniser->eat(TokenKind::LBR);
    std::unique_ptr<ast::Expr> condition = this->parseExpr();
    this->tokeniser->eat(TokenKind::RBR);
    std::unique_ptr<ast::Block> ifBlock = this->parseBlock();

    std::unique_ptr<ast::Stm> elseStm = nullptr;
    if (this->tokeniser->tok().kind == TokenKind::ELSE) {
        this->tokeniser->next();

        if (this->tokeniser->tok().kind == TokenKind::IF) {
            elseStm = this->parseIfStatement();
        } else {
            elseStm = this->parseBlock();
        }
    }
    return std::make_unique<ast::IfStm>(
        token.line,
        token.column,
        std::move(condition),
        std::move(ifBlock),
        std::move(elseStm)
    );
}

/*
 *  while_statement             = WHILE, LBR, expression, RBR, block ;
 */
std::unique_ptr<ast::WhileStm> compiler::Parser::parseWhileStatement() const {
    const auto token = this->tokeniser->tok();
    this->tokeniser->next();
    this->tokeniser->eat(TokenKind::LBR);
    std::unique_ptr<ast::Expr> condition = this->parseExpr();
    this->tokeniser->eat(TokenKind::RBR);
    std::unique_ptr<ast::Block> block = this->parseBlock();

    return std::make_unique<ast::WhileStm>(
        token.line,
        token.column,
        std::move(condition),
        std::move(block)
    );
}

/*
 *  for_statement               = FOR, LBR, for_variable, COLON, for_iterable, RBR, block ;
 */
std::unique_ptr<ast::ForStm> compiler::Parser::parseForStatement() const {
    const auto tokenFOR = this->tokeniser->tok();
    this->tokeniser->next();
    this->tokeniser->eat(TokenKind::LBR);
    auto variable = this->parseForVariable();
    this->tokeniser->eat(TokenKind::COLON);
    auto iterable = this->parseForIterable();
    this->tokeniser->eat(TokenKind::RBR);
    auto body = this->parseBlock();

    return std::make_unique<ast::ForStm>(
        tokenFOR.line,
        tokenFOR.column,
        variable,
        iterable,
        std::move(body)
    );
}

/*
 *  for_variable                = for_var_decl
 *                              | IDENTIFIER ;
 *
 *  for_var_decl                = type, IDENTIFIER ;
 */
ast::ForVariable compiler::Parser::parseForVariable() const {
    if (this->isPrimitiveTypeToken(this->tokeniser->tok().kind)) {
        auto type = this->parseType();
        std::unique_ptr<ast::Identifier> identifier = this->parseIdentifier();
        return std::make_unique<ast::StmVarDecl>(
            type->line,
            type->column,
            std::move(type),
            std::move(identifier),
            nullptr
        );
    }
    return this->parseExprIdentifier();
}

/*
 *  for_iterable                = expression
 *                              | expression, DOT_DOT, expression, [ for_step ] ;
 */
ast::ForIterable compiler::Parser::parseForIterable() const {
    auto firstExpr = this->parseExpr();

    if (this->tokeniser->tok().kind != TokenKind::DOT_DOT) {
        return firstExpr;
    }

    this->tokeniser->next(); // eat DOT_DOT
    auto secondExpr = this->parseExpr();
    auto step = this->parseForStep();

    return std::make_unique<ast::ForRange>(
        firstExpr->line,
        firstExpr->column,
        std::move(firstExpr),
        std::move(secondExpr),
        std::move(step)
    );
}

/*
 *  for_step                    = COLON, expression ;
 */
std::unique_ptr<ast::Expr> compiler::Parser::parseForStep() const {
    if (this->tokeniser->tok().kind != TokenKind::COLON) {
        return nullptr;
    }

    this->tokeniser->next(); // eat COLON
    return this->parseExpr();
}

/*
 *  continue_statement          = CONTINUE, SEMI ;
 */
std::unique_ptr<ast::ContinueStm> compiler::Parser::parseContinueStatement() const {
    const Token token = this->tokeniser->tok();
    this->tokeniser->next();
    this->tokeniser->eat(TokenKind::SEMI);

    return std::make_unique<ast::ContinueStm>(
        token.line,
        token.column
    );
}

/*
 *  break_statement             = BREAK, SEMI ;
 */
std::unique_ptr<ast::BreakStm> compiler::Parser::parseBreakStatement() const {
    const Token token = this->tokeniser->tok();
    this->tokeniser->next();
    this->tokeniser->eat(TokenKind::SEMI);

    return std::make_unique<ast::BreakStm>(
        token.line,
        token.column
    );
}

/*
 *  return_statement            = RETURN, [ expression ], SEMI ;
 */
std::unique_ptr<ast::ReturnStm> compiler::Parser::parseReturnStatement() const {
    const Token token = this->tokeniser->tok();
    this->tokeniser->next();
    std::unique_ptr<ast::Expr> returnExpression = nullptr;
    if (this->tokeniser->tok().kind != TokenKind::SEMI) {
        returnExpression = this->parseExpr();
    }
    this->tokeniser->eat(TokenKind::SEMI);

    return std::make_unique<ast::ReturnStm>(
        token.line,
        token.column,
        std::move(returnExpression)
    );
}

/*
 *  expression_statement        = expression ;
 */
std::unique_ptr<ast::ExpressionStatement> compiler::Parser::parseExpressionStatement() const {
    auto expr = this->parseExpr();
    this->tokeniser->eat(TokenKind::SEMI);

    return std::make_unique<ast::ExpressionStatement>(
        expr->line,
        expr->column,
        std::move(expr)
    );
}

/*
 *  expression          = logical_or_expression ;
 */
std::unique_ptr<ast::Expr> compiler::Parser::parseExpr() const {
    return this->parseLogicalOrExpression();
}

/*
 *  logical_or_expression       = logical_and_expression, { LOGICAL_OR, logical_and_expression } ;
 */
std::unique_ptr<ast::Expr> compiler::Parser::parseLogicalOrExpression() const {
    auto left = this->parseLogicalAndExpression();
    const auto line = left->line;
    const auto column = left->column;

    Token token = this->tokeniser->tok();

    while (token.kind == TokenKind::LOGICAL_OR) {

        // parse binary operator
        std::unique_ptr<ast::BinaryOperatorInfo>  binaryOperatorInfo = std::make_unique<ast::BinaryOperatorInfo>(
            token.line,
            token.column,
            BinaryOperator::LOGICAL_OR
        );
        this->tokeniser->next();

        // parse right expression
        std::unique_ptr<ast::Expr> right = this->parseLogicalAndExpression();

        left = std::make_unique<ast::ExprBinaryOperator>(
            line,
            column,
            std::move(left),
            std::move(binaryOperatorInfo),
            std::move(right)
        );
        token = this->tokeniser->tok();
    }
    return left;
}

/*
 *  logical_and_expression      = equality_expression, { LOGICAL_AND, equality_expression } ;
 */
std::unique_ptr<ast::Expr> compiler::Parser::parseLogicalAndExpression() const {
    auto left = this->parseEqualityExpression();
    const auto line = left->line;
    const auto column = left->column;

    Token token = this->tokeniser->tok();

    while (token.kind == TokenKind::LOGICAL_AND) {

        // parse binary operator
        std::unique_ptr<ast::BinaryOperatorInfo>  binaryOperatorInfo = std::make_unique<ast::BinaryOperatorInfo>(
            token.line,
            token.column,
            BinaryOperator::LOGICAL_AND
        );
        this->tokeniser->next();

        // parse right expression
        std::unique_ptr<ast::Expr> right = this->parseEqualityExpression();

        left = std::make_unique<ast::ExprBinaryOperator>(
            line,
            column,
            std::move(left),
            std::move(binaryOperatorInfo),
            std::move(right)
        );
        token = this->tokeniser->tok();
    }
    return left;
}

/*
 *  equality_expression         = comparison_expression, { ( EQUAL_EQUAL | NOT_EQUAL ), comparison_expression } ;
 */
std::unique_ptr<ast::Expr> compiler::Parser::parseEqualityExpression() const {
    auto left = this->parseComparisonExpression();
    const auto line = left->line;
    const auto column = left->column;

    Token token = this->tokeniser->tok();

    while (token.kind == TokenKind::EQUAL_EQUAL || token.kind == TokenKind::NOT_EQUAL) {

        // parse binary operator
        std::unique_ptr<ast::BinaryOperatorInfo> binaryOperatorInfo = nullptr;
        switch (token.kind) {
            case TokenKind::EQUAL_EQUAL:
                binaryOperatorInfo = std::make_unique<ast::BinaryOperatorInfo>(
                    token.line,
                    token.column,
                    BinaryOperator::EQUAL_EQUAL
                );
                break;
            case TokenKind::NOT_EQUAL:
                binaryOperatorInfo = std::make_unique<ast::BinaryOperatorInfo>(
                    token.line,
                    token.column,
                    BinaryOperator::NOT_EQUAL
                );
                break;
            default:
                this->throwUnexpectedTokenError(this->tokeniser->tok());
        }
        this->tokeniser->next();

        // parse right expression
        std::unique_ptr<ast::Expr> right = this->parseComparisonExpression();

        left = std::make_unique<ast::ExprBinaryOperator>(
            line,
            column,
            std::move(left),
            std::move(binaryOperatorInfo),
            std::move(right)
        );
        token = this->tokeniser->tok();
    }
    return left;
}

/*
 *  comparison_expression       = additive_expression, { ( LESS_THAN | LESS_THAN_OR_EQUAL | GREATER_THAN | GREATER_THAN_OR_EQUAL ), additive_expression } ;
 */
std::unique_ptr<ast::Expr> compiler::Parser::parseComparisonExpression() const {
    auto left = this->parseAdditiveExpression();
    const auto line = left->line;
    const auto column = left->column;

    Token token = this->tokeniser->tok();

    while (token.kind == TokenKind::LESS_THAN ||
        token.kind == TokenKind::LESS_THAN_OR_EQUAL ||
        token.kind == TokenKind::GREATER_THAN ||
        token.kind == TokenKind::GREATER_THAN_OR_EQUAL) {

        // parse binary operator
        std::unique_ptr<ast::BinaryOperatorInfo> binaryOperatorInfo = nullptr;
        switch (token.kind) {
            case TokenKind::LESS_THAN:
                binaryOperatorInfo = std::make_unique<ast::BinaryOperatorInfo>(
                    token.line,
                    token.column,
                    BinaryOperator::LESS_THAN
                );
                break;
            case TokenKind::LESS_THAN_OR_EQUAL:
                binaryOperatorInfo = std::make_unique<ast::BinaryOperatorInfo>(
                    token.line,
                    token.column,
                    BinaryOperator::LESS_THAN_OR_EQUAL
                );
                break;
            case TokenKind::GREATER_THAN:
                binaryOperatorInfo = std::make_unique<ast::BinaryOperatorInfo>(
                    token.line,
                    token.column,
                    BinaryOperator::GREATER_THAN
                );
                break;
            case TokenKind::GREATER_THAN_OR_EQUAL:
                binaryOperatorInfo = std::make_unique<ast::BinaryOperatorInfo>(
                    token.line,
                    token.column,
                    BinaryOperator::GREATER_THAN_OR_EQUAL
                );
                break;
            default:
                this->throwUnexpectedTokenError(this->tokeniser->tok());
        }
        this->tokeniser->next();

        // parse right expression
        std::unique_ptr<ast::Expr> right = this->parseAdditiveExpression();

        left = std::make_unique<ast::ExprBinaryOperator>(
            line,
            column,
            std::move(left),
            std::move(binaryOperatorInfo),
            std::move(right)
        );
        token = this->tokeniser->tok();
    }
    return left;
}

/*
 *  additive_expression         = multiplicative_expression, { ( PLUS | MINUS ), multiplicative_expression } ;
 */
std::unique_ptr<ast::Expr> compiler::Parser::parseAdditiveExpression() const {
    auto left = this->parseMultiplicativeExpression();
    const auto line = left->line;
    const auto column = left->column;

    Token token = this->tokeniser->tok();

    while (token.kind == TokenKind::PLUS || token.kind == TokenKind::MINUS) {

        // parse binary operator
        std::unique_ptr<ast::BinaryOperatorInfo> binaryOperatorInfo = nullptr;
        switch (token.kind) {
            case TokenKind::PLUS:
                binaryOperatorInfo = std::make_unique<ast::BinaryOperatorInfo>(
                    token.line,
                    token.column,
                    BinaryOperator::ADD
                );
                break;
            case TokenKind::MINUS:
                binaryOperatorInfo = std::make_unique<ast::BinaryOperatorInfo>(
                    token.line,
                    token.column,
                    BinaryOperator::SUBTRACT
                );
                break;
            default:
                this->throwUnexpectedTokenError(this->tokeniser->tok());
        }
        this->tokeniser->next();

        // parse right expression
        std::unique_ptr<ast::Expr> right = this->parseMultiplicativeExpression();

        left = std::make_unique<ast::ExprBinaryOperator>(
            line,
            column,
            std::move(left),
            std::move(binaryOperatorInfo),
            std::move(right)
        );
        token = this->tokeniser->tok();
    }
    return left;
}

/*
 *  multiplicative_expression   = unary_expression, { ( MULTIPLY | DIVIDE | INTEGER_DIVIDE | MODULO ), unary_expression } ;
 */
std::unique_ptr<ast::Expr> compiler::Parser::parseMultiplicativeExpression() const {
    auto left = this->parseUnaryExpression();
    const auto line = left->line;
    const auto column = left->column;

    Token token = this->tokeniser->tok();

    while (token.kind == TokenKind::MULTIPLY || token.kind == TokenKind::DIVIDE || token.kind == TokenKind::INTEGER_DIVIDE || token.kind == TokenKind::MODULO) {
        // parse binary operator
        BinaryOperator binaryOperator;
        switch (token.kind) {
            case TokenKind::MULTIPLY:
                binaryOperator = BinaryOperator::MULTIPLY;
                break;

            case TokenKind::DIVIDE:
                binaryOperator = BinaryOperator::DIVIDE;
                break;

            case TokenKind::INTEGER_DIVIDE:
                binaryOperator = BinaryOperator::INTEGER_DIVIDE;
                break;

            case TokenKind::MODULO:
                binaryOperator = BinaryOperator::MODULO;
                break;

            default:
                this->throwUnexpectedTokenError(this->tokeniser->tok());
        }

        auto binaryOperatorInfo = std::make_unique<ast::BinaryOperatorInfo>(
            token.line,
            token.column,
            binaryOperator
        );

        this->tokeniser->next();

        // parse right expression
        std::unique_ptr<ast::Expr> right = this->parseUnaryExpression();

        left = std::make_unique<ast::ExprBinaryOperator>(
            line,
            column,
            std::move(left),
            std::move(binaryOperatorInfo),
            std::move(right)
        );
        token = this->tokeniser->tok();
    }
    return left;
}

/*
 *  unary_expression            = ( PLUS | MINUS | LOGICAL_NOT ), unary_expression
 *                              | cast_expression
 *                              | [ INCREMENT | DECREMENT ], postfix_expression ;
 */
std::unique_ptr<ast::Expr> compiler::Parser::parseUnaryExpression() const {
    const auto token = this->tokeniser->tok();

    if (token.kind == TokenKind::PLUS || token.kind == TokenKind::MINUS || token.kind == TokenKind::LOGICAL_NOT) {

        // parse unary operator
        std::unique_ptr<ast::UnaryOperatorInfo> unaryOperatorInfo = nullptr;
        switch (token.kind) {
            case TokenKind::PLUS: {
                unaryOperatorInfo = std::make_unique<ast::UnaryOperatorInfo>(
                    token.line,
                    token.column,
                    UnaryOperator::PLUS
                );
                break;
            }
            case TokenKind::MINUS: {
                unaryOperatorInfo = std::make_unique<ast::UnaryOperatorInfo>(
                    token.line,
                    token.column,
                    UnaryOperator::MINUS
                );
                break;
            }
            case TokenKind::LOGICAL_NOT: {
                unaryOperatorInfo = std::make_unique<ast::UnaryOperatorInfo>(
                    token.line,
                    token.column,
                    UnaryOperator::LOGICAL_NOT
                );
                break;
            }
        }
        this->tokeniser->next();
        auto expr = this->parseUnaryExpression();

        return std::make_unique<ast::ExprUnaryOperator>(
            expr->line,
            expr->column,
            std::move(unaryOperatorInfo),
            std::move(expr)
        );
    }

    if (token.kind == TokenKind::LBR &&
        isPrimitiveTypeToken(this->tokeniser->lookAhead(1).kind)
    ) {
        return this->parseCastExpression();
    }

    if (token.kind == TokenKind::INCREMENT || token.kind == TokenKind::DECREMENT) {
        std::unique_ptr<ast::UnaryOperatorInfo> unaryOperatorInfo = nullptr;

        switch (token.kind) {
            case TokenKind::INCREMENT: {
                unaryOperatorInfo = std::make_unique<ast::UnaryOperatorInfo>(
                    token.line,
                    token.column,
                    UnaryOperator::INCREMENT
                );
                break;
            }
            case TokenKind::DECREMENT: {
                unaryOperatorInfo = std::make_unique<ast::UnaryOperatorInfo>(
                    token.line,
                    token.column,
                    UnaryOperator::DECREMENT
                );
                break;
            }
        }
        this->tokeniser->next();
        auto expression = this->parseExprPostfix();

        return std::make_unique<ast::ExprUnaryOperator>(
            unaryOperatorInfo->line,
            unaryOperatorInfo->column,
            std::move(unaryOperatorInfo),
            std::move(expression)
        );
    }

    return this->parseExprPostfix();
}

/*
 *  LBR, type, RBR, unary_expression ;
 */
std::unique_ptr<ast::Expr> compiler::Parser::parseCastExpression() const {
    const auto token = this->tokeniser->tok();

    this->tokeniser->eat(TokenKind::LBR);
    auto typeInfo = this->parseType();
    this->tokeniser->eat(TokenKind::RBR);
    auto expression = this->parseUnaryExpression();

    return std::make_unique<ast::ExprCast>(
        token.line,
        token.column,
        std::move(typeInfo),
        std::move(expression)
    );
}

/*
 *  index                = LSQBR, expression, RSQBR ;
 */
std::unique_ptr<ast::Index> compiler::Parser::parseIndex() const {
    const auto tokenLSQBR = this->tokeniser->tok();
    this->tokeniser->eat(TokenKind::LSQBR);
    auto expr = this->parseExpr();
    this->tokeniser->eat(TokenKind::RSQBR);

    return std::make_unique<ast::Index>(
        tokenLSQBR.line,
        tokenLSQBR.column,
        std::move(expr)
    );
}

/*
 *  field_access                = DOT, IDENTIFIER ;
 */
std::unique_ptr<ast::FieldAccess> compiler::Parser::parseFieldAccess() const {
    const auto tokenDOT = this->tokeniser->tok();
    this->tokeniser->eat(TokenKind::DOT);
    auto identifier = this->parseIdentifier();

    return std::make_unique<ast::FieldAccess>(
        tokenDOT.line,
        tokenDOT.column,
        std::move(identifier)
    );
}

/*
 *  postfix_expression          = primary_expression, { index | field_access }, [ INCREMENT | DECREMENT ] ;
 */
std::unique_ptr<ast::Expr> compiler::Parser::parseExprPostfix() const {
    auto expression = this->parsePrimaryExpression();

    bool morePostfixOperatorsToParse = true;

    std::vector<ast::PostfixOperator> postfixOperators;

    while (morePostfixOperatorsToParse) {
        switch (this->tokeniser->tok().kind) {
            case TokenKind::LSQBR: postfixOperators.push_back(this->parseIndex()); break;
            case TokenKind::DOT: postfixOperators.push_back(this->parseFieldAccess()); break;

            default: morePostfixOperatorsToParse = false;
        }
    }

    auto incDecOp = this->parseIncrementDecrementOperator();

    if (postfixOperators.empty() && incDecOp == nullptr) {
        return expression;
    }

    return std::make_unique<ast::ExprPostfix>(
        expression->line,
        expression->column,
        std::move(expression),
        postfixOperators,
        std::move(incDecOp)
    );
}

/*
 *  primary_expression          = function_call
 *                              | IDENTIFIER
 *                              | new_expression
 *                              | literal
 *                              | LBR, expression, RBR ;
 */
std::unique_ptr<ast::Expr> compiler::Parser::parsePrimaryExpression() const {
    const Token token = this->tokeniser->tok();
